--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,17 +1,13 @@
-$bgColor: #24292e;
-$text: #fff;
-
-@font-face {
-  font-family: 'Comic';
-  src: url('../fonts/comic.ttf') format('truetype');
-  font-weight: normal;
-  font-style: italic;
-}
+@import './_fonts';
+@import './_normalize.css';
+@import './_variables';
+@import './_mixins';
+@import './_m-header';
+@import './title';
+@import './navigation.scss';
+@import './main';
 
 body {
-  padding: 1rem;
-  margin: 0;
-  font-family: Comic, sans-serif;
-  background-color: $bgColor;
-  color: $text;
+  box-sizing: border-box;
+  font-family: 'TT Lakes', serif, sans-serif;
 }
