--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -1,17 +1,69 @@
-.header-brands {
-  min-width: 320px;
-  height: 56px;
-  border-top: 2px solid #d9fff5;
-  /* margin: 0 auto; */
-  background: #f8f8f8;
+.brands,
+.swiper {
+	min-width: 320px;
+	min-height: 154px;
 }
 
-.header-brands__title {
-  display: inline-block;
-  vertical-align: middle;
-  min-height: 80px;
-  padding: 0 16px 16px 16px;
-  font-size: 16px;
-  color: #7e7e82;
-  text-transform: uppercase;
+.brands__list {
+	padding-left: 16px;
+	padding-bottom: 16px;
+}
+
+.brands__item {
+    padding-right: 40px;
+}
+
+.brands__btn {
+	display: flex;
+	justify-content: space-between;
+	align-items: center;
+	padding: 0 16px;
+	width: 240px;
+	height: 72px;
+	border: 1px solid #EAEAEA;
+	border-radius: 5px;
+}
+
+.brands__btn:hover {
+	transform: scale(0.95);
+	box-shadow: 0px 0px 12px 0px rgba(34, 60, 80, 0.15);
+}
+
+.brands__btn:active {
+	border: 1px solid #FF3E79;
+	background-position: 95% 50%;
+}
+
+.swiper-pagination-bullet {
+	opacity: 1;
+	background-color: #DDDDDD;
+	width: 12px;
+	height: 12px;
+}
+
+.swiper-pagination-bullet-active {
+	background-color: #B5B6BC;
+	transform: scale(1.3);
+}
+
+.brands__enter {
+	background: url('../img/back.svg');
+	width: 40px;
+	height: 40px;
+	display: flex;
+	justify-content: center;
+	align-items: center;
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
+}
+
+.brands__enter::after {
+	content: "";
+	width: 16px;
+	height: 16px;
+	background: URL('../img/dropdown.svg');
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: contain;
 }
