--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -1,4 +1,5 @@
 @import './_fonts';
+@import './reset.css';
 @import './_normalize.css';
 @import './_variables';
 @import './_mixins';
@@ -6,16 +7,12 @@
 @import './title';
 @import './navigation.scss';
 @import './main.scss';
+@import './header-brands.scss';
 @import './brands.scss';
 
 body {
   box-sizing: border-box;
   font-family: 'TT Lakes', serif, sans-serif;
-}
-
-img {
-  padding: 0;
-  margin: 0;
 }
 
 .hidden {
