--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -1,16 +1,20 @@
 .brands,
 .swiper {
 	min-width: 320px;
-	min-height: 154px;
+	height: 134px;
+	padding-bottom: 16px;
 }
 
 .brands__list {
+	height: 72px;
 	padding-left: 16px;
 	padding-bottom: 16px;
 }
 
-.brands__item {
-    padding-right: 40px;
+.brands__item,
+.swiper-slide {
+	width: 240px;
+	padding-right: 60px;
 }
 
 .brands__btn {
