--- a/style.css
+++ b/style.css
@@ -1,3 +1,113 @@
+/* Reset and base styles  */
+* {
+    padding: 0px;
+    margin: 0px;
+    border: none;
+}
+
+*,
+*::before,
+*::after {
+    box-sizing: border-box;
+}
+
+/* Links */
+
+a,
+a:link,
+a:visited {
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: none;
+}
+
+/* Common */
+
+aside,
+nav,
+footer,
+header,
+section,
+main {
+    display: block;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6,
+p {
+    font-size: inherit;
+    font-weight: inherit;
+}
+
+ul,
+ul li {
+    list-style: none;
+}
+
+img {
+    vertical-align: top;
+}
+
+img,
+svg {
+    max-width: 100%;
+    height: auto;
+}
+
+address {
+    font-style: normal;
+}
+
+/* Form */
+
+input,
+textarea,
+button,
+select {
+    font-family: inherit;
+    font-size: inherit;
+    color: inherit;
+    background-color: transparent;
+}
+
+input::-ms-clear {
+    display: none;
+}
+
+button,
+input[type="submit"] {
+    display: inline-block;
+    box-shadow: none;
+    background-color: transparent;
+    background: none;
+    cursor: pointer;
+}
+
+input:focus,
+input:active,
+button:focus,
+button:active {
+    outline: none;
+}
+
+button::-moz-focus-inner {
+    padding: 0;
+    border: 0;
+}
+
+label {
+    cursor: pointer;
+}
+
+legend {
+    display: block;
+}
 html {
   box-sizing: border-box;
 }
@@ -169,8 +279,7 @@ button {
 
 .m-header__list-item {
   width: 40px;
-  height: 40px;
-  /* border-radius: 50%; */ }
+  height: 40px; }
 
 .m-header__list-item--logo::after {
   content: '';
@@ -182,7 +291,7 @@ button {
   background-size: contain;
   display: inline-block;
   margin-left: 10px;
-  transform: translateY(-10px); }
+  transform: translateY(10px); }
 
 .m-header__btn {
   width: 40px;
@@ -310,7 +419,8 @@ button {
   background-position: center;
   background-size: contain;
   display: inline-block;
-  margin-right: 15px; }
+  margin-right: 15px;
+  transition: 0.3s; }
 
 .arrows__up::before {
   content: '';
@@ -325,29 +435,89 @@ button {
   margin-right: 15px;
   transition: 0.3s; }
 
-.header-brands {
+.m-title {
+  display: flex;
+  align-items: center;
+  justify-content: center;
   min-width: 320px;
-  height: 56px;
-  border-top: 2px solid #d9fff5;
-  /* margin: 0 auto; */
-  background: #f8f8f8; }
-
-.header-brands__title {
-  display: inline-block;
-  vertical-align: middle;
   min-height: 80px;
-  padding: 0 16px 16px 16px;
+  border-top: 2px solid #d9fff5;
+  background: #f8f8f8;
+  margin-bottom: 16px; }
+
+.m-title__title {
   font-size: 16px;
   color: #7e7e82;
-  text-transform: uppercase; }
+  text-transform: uppercase;
+  padding: 16px; }
+
+.brands,
+.swiper {
+  min-width: 320px;
+  height: 134px;
+  padding-bottom: 16px; }
+
+.brands__list {
+  height: 72px;
+  padding-left: 16px;
+  padding-bottom: 16px; }
+
+.brands__item,
+.swiper-slide {
+  width: 240px;
+  padding-right: 60px; }
+
+.brands__btn {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px;
+  width: 240px;
+  height: 72px;
+  border: 1px solid #EAEAEA;
+  border-radius: 5px; }
+
+.brands__btn:hover {
+  transform: scale(0.95);
+  box-shadow: 0px 0px 12px 0px rgba(34, 60, 80, 0.15); }
+
+.brands__btn:active {
+  border: 1px solid #FF3E79;
+  background-position: 95% 50%; }
+
+.swiper-pagination-bullet {
+  opacity: 1;
+  background-color: #DDDDDD;
+  width: 12px;
+  height: 12px; }
+
+.swiper-pagination-bullet-active {
+  background-color: #B5B6BC;
+  transform: scale(1.3); }
+
+.brands__enter {
+  background: url(./static/back.svg);
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
+
+.brands__enter::after {
+  content: "";
+  width: 16px;
+  height: 16px;
+  background: URL(./static/dropdown.svg);
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain; }
 
 body {
   box-sizing: border-box;
   font-family: 'TT Lakes', serif, sans-serif; }
-
-img {
-  padding: 0;
-  margin: 0; }
 
 .hidden {
   display: none; }
