vtoroj swiper govno

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import './main.scss';
 @import './header-brands.scss';
 @import './brands.scss';
+@import './tech-types.scss';
 
 body {
   box-sizing: border-box;
