--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -1,73 +1,75 @@
 .brands,
 .swiper {
-	min-width: 320px;
-	height: 134px;
-	padding-bottom: 16px;
+  min-width: 320px;
+  height: 114px;
+  padding-bottom: 16px;
 }
 
 .brands__list {
-	height: 72px;
-	padding-left: 16px;
-	padding-bottom: 16px;
+  height: 72px;
+  padding-bottom: 16px;
 }
 
 .brands__item,
 .swiper-slide {
-	width: 240px;
-	padding-right: 60px;
+  width: 240px;
+}
+
+.brands__item:last-child {
+  padding-bottom: 5px;
 }
 
 .brands__btn {
-	display: flex;
-	justify-content: space-between;
-	align-items: center;
-	padding: 0 16px;
-	width: 240px;
-	height: 72px;
-	border: 1px solid #EAEAEA;
-	border-radius: 5px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0 16px;
+  width: 240px;
+  height: 72px;
+  border: 1px solid #eaeaea;
+  border-radius: 5px;
 }
 
 .brands__btn:hover {
-	transform: scale(0.95);
-	box-shadow: 0px 0px 12px 0px rgba(34, 60, 80, 0.15);
+  transform: scale(0.95);
+  box-shadow: 0px 0px 12px 0px rgba(34, 60, 80, 0.15);
 }
 
 .brands__btn:active {
-	border: 1px solid #FF3E79;
-	background-position: 95% 50%;
+  border: 1px solid #ff3e79;
+  background-position: 95% 50%;
 }
 
 .swiper-pagination-bullet {
-	opacity: 1;
-	background-color: #DDDDDD;
-	width: 12px;
-	height: 12px;
+  opacity: 1;
+  background-color: #dddddd;
+  width: 12px;
+  height: 12px;
 }
 
 .swiper-pagination-bullet-active {
-	background-color: #B5B6BC;
-	transform: scale(1.3);
+  background-color: #b5b6bc;
+  transform: scale(1.3);
 }
 
 .brands__enter {
-	background: url('../img/back.svg');
-	width: 40px;
-	height: 40px;
-	display: flex;
-	justify-content: center;
-	align-items: center;
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
+  background: url('../img/back.svg');
+  width: 40px;
+  height: 40px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
 
 .brands__enter::after {
-	content: "";
-	width: 16px;
-	height: 16px;
-	background: URL('../img/dropdown.svg');
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: contain;
+  content: '';
+  width: 16px;
+  height: 16px;
+  background: URL('../img/dropdown.svg');
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: contain;
 }
