--- a/src/scss/_brands.scss
+++ b/src/scss/_brands.scss
@@ -1,5 +1,5 @@
-.brands,
-.swiper {
+.brands
+/* .swiper */ {
   min-width: 320px;
   height: 114px;
   padding-bottom: 16px;
@@ -10,8 +10,7 @@
   padding-bottom: 16px;
 }
 
-.brands__item,
-.swiper-slide {
+.brands__item {
   width: 240px;
 }
 
@@ -40,35 +39,13 @@
   background-position: 95% 50%;
 }
 
-.swiper-pagination-bullet {
-  opacity: 1;
-  background-color: #dddddd;
-  width: 12px;
-  height: 12px;
-}
-
-.swiper-pagination-bullet-active {
-  background-color: #b5b6bc;
-  transform: scale(1.3);
-}
-
 .brands__enter {
-  background: url('../img/back.svg');
+  background: url('../img/go.svg');
   width: 40px;
   height: 40px;
   display: flex;
   justify-content: center;
   align-items: center;
-  background-repeat: no-repeat;
-  background-position: center;
-  background-size: contain;
-}
-
-.brands__enter::after {
-  content: '';
-  width: 16px;
-  height: 16px;
-  background: URL('../img/dropdown.svg');
   background-repeat: no-repeat;
   background-position: center;
   background-size: contain;
