--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -4,10 +4,9 @@
 @import './_variables';
 @import './_mixins';
 @import './_m-header';
-@import './title';
+@import './_main_title';
 @import './navigation.scss';
 @import './main.scss';
-@import './header-brands.scss';
 @import './brands.scss';
 @import './types-of.scss';
 @import './common.scss';
