--- a/src/scss/_main.scss
+++ b/src/scss/_main.scss
@@ -1,5 +1,5 @@
 .main {
-  min-height: 498px;
+  min-height: 448px;
 
   &__title {
     color: #1b1c21;
@@ -63,6 +63,7 @@
     font-size: 13px;
     font-weight: 400;
     color: #1b1c21;
+    padding-left: 16px;
     padding-bottom: 16px;
     word-spacing: normal;
   }
@@ -101,5 +102,9 @@
       margin-right: 15px;
       transition: 0.3s;
     }
+  }
+
+  &__cps-pic {
+    display: block;
   }
 }
