--- a/src/scss/_types-of.scss
+++ b/src/scss/_types-of.scss
@@ -20,7 +20,7 @@
     display: flex;
     justify-content: space-between;
     color: #1b1c21;
-    min-width: 240px;
+    width: 240px;
     height: 160px;
     padding: 16px;
     font-size: 16px;
