--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -8,6 +8,8 @@
 @import './brands.scss';
 @import './types-of.scss';
 @import './common.scss';
+@import './prices.scss';
+
 body {
   box-sizing: border-box;
   font-family: 'TT Lakes', serif, sans-serif;
@@ -15,8 +17,4 @@ body {
 
 .hidden {
   display: none;
-}
-
-.cps__main {
-  padding-bottom: 24px;
 }
