mobile vers - ready. No modals

--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -9,6 +9,7 @@
 @import './types-of.scss';
 @import './common.scss';
 @import './prices.scss';
+@import './footer.scss';
 
 body {
   box-sizing: border-box;
