--- a/src/scss/_prices.scss
+++ b/src/scss/_prices.scss
@@ -55,3 +55,27 @@
         transition: 0.3s;
     }
 }
+
+.prices__description {
+    min-height: 193px;
+    min-width: 320px;
+    font-size: 14px;
+    padding: 16px;
+}
+
+.prices__get-offer {
+    padding: 16px 0;
+    font-weight: 500;
+    font-size: 16px;
+    text-align: left;
+}
+
+.prices__get-offer:after {
+    content: '';
+    display: inline-block;
+    width: 12px;
+    height: 18px;
+    background: URL('../img/side-arrow.svg') center center / cover no-repeat;
+    vertical-align: middle;
+    margin-left: 5px;
+}
