--- a/src/scss/style.scss
+++ b/src/scss/style.scss
@@ -10,6 +10,7 @@
 @import './common.scss';
 @import './prices.scss';
 @import './footer.scss';
+@import './modal.scss';
 
 body {
   box-sizing: border-box;
