--- a/src/scss/blocks/_article.scss
+++ b/src/scss/blocks/_article.scss
@@ -37,7 +37,7 @@
 .article__img {
   padding-top: 55%;
   width: 100%;
-  background: url(/src/img/CSP_image.jpg) no-repeat;
+  background: url(/src/img/CPS_img.jpg) no-repeat;
   background-size: 100% auto;
   background-position: 0 45%;
 
